--- a/index.html
+++ b/index.html
@@ -1,20 +1,116 @@
-<!--
- * @Description: 
- * @Author: 安知鱼
- * @Email: anzhiyu-c@qq.com
- * @Date: 2023-08-26 10:57:57
- * @LastEditTime: 2023-08-26 10:58:10
- * @LastEditors: 安知鱼
--->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>安知鱼公益CDN</title>
+    <title>安知鱼公益 CDN</title>
+    <link rel="icon" type="image/x-icon" href="/img/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="海外禁止访问" />
+    <link rel="bookmark" href="/img/apple-touch-icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/img/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico" />
+    <link rel="manifest" href="/img/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="海外禁止访问，请使用中国大陆网络访问。" />
+    <meta name="theme-color" content="#f6f7f8" />
   </head>
-  <body>
-    安知鱼公益CDN
+  <body style="background: #f6f7f8; margin: 0; padding: 0">
+    <div
+      class="prohibition"
+      style="
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        height: var(--vh);
+      "
+    >
+      <div
+        class="card"
+        style="
+          background: #fff;
+          max-width: 428px;
+          max-height: 569px;
+          border-radius: 16px;
+          padding: 24px 36px 20px 36px;
+          display: flex;
+          flex-direction: column;
+          margin: auto;
+          align-items: center;
+        "
+      >
+        <div
+          class="title"
+          style="
+            width: 256px;
+            height: 256px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+          "
+        >
+          <h1 alt="禁止海外访问" style="margin: 0">安知鱼公益CDN</h1>
+          <h2 class="title-tip" style="font-size: 50px; margin: 0">🌧️</h2>
+        </div>
+        <div
+          class="prohibition-card"
+          style="
+            width: 100%;
+            display: flex;
+            margin-top: 16px;
+            background: #f7f7f7;
+            padding: 18px;
+            border-radius: 16px;
+            align-items: center;
+          "
+        >
+          <div
+            class="prohibition-head"
+            style="
+              width: 48px;
+              height: 48px;
+              background-image: url(/img/apple-touch-icon.png);
+              border-radius: 68px;
+              background-size: contain;
+              margin-right: 16px;
+            "
+          ></div>
+          <div
+            class="prohibition-info"
+            style="height: 48px; display: flex; justify-content: space-around; flex-direction: column"
+          >
+            <div class="prohibition-name" style="font-weight: bold">安知鱼</div>
+            <div class="prohibition-description" style="font-size: 12px; color: #000; opacity: 0.5">
+              生活明朗，万物可爱
+            </div>
+          </div>
+        </div>
+      </div>
+      <a
+        class="help"
+        href="https://blog.anheyu.com/"
+        title="访问安知鱼的博客"
+        target="_blank"
+        style="font-size: 14px; color: #000; opacity: 0.5; text-decoration: none; margin: 20px 0"
+        onclick="location.reload()"
+      >
+        访问安知鱼的博客
+      </a>
+    </div>
+    <script>
+      const vh = window.innerHeight * 1;
+      document.documentElement.style.setProperty("--vh", `${vh}px`);
+      window.addEventListener("resize", () => {
+        let vh = window.innerHeight * 1;
+        document.documentElement.style.setProperty("--vh", `${vh}px`);
+      });
+    </script>
   </body>
 </html>
