--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>安知鱼公益 CDN</title>
-    <link rel="icon" type="image/x-icon" href="/img/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
+    <title>梦念逍遥私人 CDN</title>
+    <link rel="icon" type="image/x-icon" href="/img/safari-pinned-tab.svg" />
+    <link rel="apple-touch-icon" href="/img/safari-pinned-tab.svg" />
     <meta name="apple-mobile-web-app-title" content="海外禁止访问" />
-    <link rel="bookmark" href="/img/apple-touch-icon.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/img/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico" />
+    <link rel="bookmark" href="/img/safari-pinned-tab.svg" />
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/img/safari-pinned-tab.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/safari-pinned-tab.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg" />
     <link rel="manifest" href="/img/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
@@ -54,29 +54,14 @@
           class="title"
           style="width: 556px; display: flex; align-items: center; justify-content: center; flex-direction: column"
         >
-          <h1 alt="禁止海外访问" style="margin: 0">安知鱼公益CDN</h1>
-
-          <!-- 例如： ```json { "name": "hexo-theme-anzhiyu", "allowedPaths": ["source/js"] } ``` 即可使用
-          https://cdn.anheyu.com/npm/hexo-theme-anzhiyu/source/js/ 访问其目录下的所有资源 -->
+          <h1 alt="禁止海外访问" style="margin: 0">梦念逍遥私人CDN</h1>
         </div>
         <div>
           <p>
             这是一个镜像了
             <a href="https://www.jsdelivr.com/" target="_blank" rel="noopener noreferrer">https://www.jsdelivr.com/</a>
           </p>
-          <p>npm模块的CDN项目</p>
-          <p>
-            <a href="https://github.com/anzhiyu-c/vercel-jsdelivr" target="_blank" rel="noopener noreferrer">本项目</a>
-            采用白名单模式，如果您的公开库需要使用请向本仓库提交issuse
-          </p>
-
-          <p>1. 您的项目是开源的</p>
-          <p>2.您的项目内资源遵循中国大陆法律</p>
-          <p>3.仅仅只能代理代码部分（图片等资源不接受代理），请您提交的时候提交您需要代理的目录与文件</p>
-          <p>https://cdn.anheyu.com/npm/package@version/file</p>
-          <p>https://cdn.anheyu.com/npm/jquery@3.6.4/dist/jquery.min.js</p>
-          <p>https://cdn.anheyu.com/npm/jquery@3.6/dist/jquery.min.js</p>
-          <p>https://cdn.anheyu.com/npm/jquery@3/dist/jquery.min.js</p>
+          <p>npm模块以及github模块的CDN项目</p>
         </div>
 
         <div
@@ -96,7 +81,7 @@
             style="
               width: 48px;
               height: 48px;
-              background-image: url(/img/apple-touch-icon.png);
+              background-image: url(/img/safari-pinned-tab.svg);
               border-radius: 68px;
               background-size: contain;
               margin-right: 16px;
@@ -106,21 +91,21 @@
             class="prohibition-info"
             style="height: 48px; display: flex; justify-content: space-around; flex-direction: column"
           >
-            <div class="prohibition-name" style="font-weight: bold">安知鱼</div>
+            <div class="prohibition-name" style="font-weight: bold">梦念逍遥</div>
             <div class="prohibition-description" style="font-size: 12px; color: #000; opacity: 0.5">
-              生活明朗，万物可爱
+              无梦之境
             </div>
           </div>
         </div>
       </div>
       <a
         class="help"
-        href="https://blog.anheyu.com/"
-        title="访问安知鱼的博客"
+        href="https://blog.mnxy.eu.org/"
+        title="访问梦念逍遥的博客"
         target="_blank"
         style="font-size: 14px; color: #000; opacity: 0.5; text-decoration: none; margin: 20px 0"
       >
-        访问安知鱼的博客
+        访问梦念逍遥的博客
       </a>
     </div>
     <script>
