--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>梦念逍遥私人 CDN</title>
-    <link rel="icon" type="image/x-icon" href="/img/safari-pinned-tab.svg" />
-    <link rel="apple-touch-icon" href="/img/safari-pinned-tab.svg" />
+    <link rel="icon" type="image/x-icon" href="/img/favicon.svg" />
+    <link rel="apple-touch-icon" href="/img/favicon.svg" />
     <meta name="apple-mobile-web-app-title" content="海外禁止访问" />
-    <link rel="bookmark" href="/img/safari-pinned-tab.svg" />
-    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/img/safari-pinned-tab.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/safari-pinned-tab.svg" />
+    <link rel="bookmark" href="/img/favicon.svg" />
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/img/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon.svg" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg" />
     <link rel="manifest" href="/img/site.webmanifest" />
@@ -81,7 +81,7 @@
             style="
               width: 48px;
               height: 48px;
-              background-image: url(/img/safari-pinned-tab.svg);
+              background-image: url(/img/favicon.svg);
               border-radius: 68px;
               background-size: contain;
               margin-right: 16px;
