--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>梦念逍遥私人 CDN</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.svg" />
+    <link rel="icon" type="image/svg" href="/img/favicon.svg" />
     <link rel="apple-touch-icon" href="/img/favicon.svg" />
     <meta name="apple-mobile-web-app-title" content="海外禁止访问" />
     <link rel="bookmark" href="/img/favicon.svg" />
     <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/img/favicon.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg" />
+    <link rel="icon" type="image/svg" sizes="32x32" href="favicon.svg" />
+    <link rel="icon" type="image/svg" sizes="16x16" href="favicon.svg" />
     <link rel="manifest" href="/img/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
