--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
         <div>
           <p>
             这是一个镜像了
-            <a href="https://www.jsdelivr.com/" target="_blank" rel="noopener noreferrer">https://www.jsdelivr.com/</a>
+            <p><a href="https://unpkg.com/" target="_blank" rel="noopener noreferrer">https://unpkg.com/</a>npm模块</p>
+            <p><a href="https://www.jsdelivr.com/" target="_blank" rel="noopener noreferrer">https://www.jsdelivr.com/</a>npm模块以及github模块</p>
           </p>
-          <p>npm模块以及github模块的CDN项目</p>
+          <p>的CDN项目</p>
         </div>
 
         <div
