--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>梦念逍遥私人 CDN</title>
-    <link rel="icon" type="image/svg" href="/img/favicon.svg" />
-    <link rel="apple-touch-icon" href="/img/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="./img/pwa-144x144.png" />
+    <link rel="apple-touch-icon" href="./img/pwa-144x144.png" />
     <meta name="apple-mobile-web-app-title" content="海外禁止访问" />
-    <link rel="bookmark" href="/img/favicon.svg" />
-    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/img/favicon.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon.svg" />
-    <link rel="icon" type="image/svg" sizes="32x32" href="favicon.svg" />
-    <link rel="icon" type="image/svg" sizes="16x16" href="favicon.svg" />
+    <link rel="bookmark" href="./img/pwa-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="./img/pwa-144x144.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/pwa-144x144.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico" />
     <link rel="manifest" href="/img/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
@@ -82,7 +82,7 @@
             style="
               width: 48px;
               height: 48px;
-              background-image: url(/img/favicon.svg);
+              background-image: url(./img/pwa-144x144.png);
               border-radius: 68px;
               background-size: contain;
               margin-right: 16px;
